--- a/TrumpEngine.Console/TrumpEngine.Console.csproj
+++ b/TrumpEngine.Console/TrumpEngine.Console.csproj
@@ -6,6 +6,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Newtonsoft.Json" Version="10.0.3" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\TrumpEngine.Core\TrumpEngine.Core.csproj" />
     <ProjectReference Include="..\TrumpEngine.Model\TrumpEngine.Model.csproj" />
   </ItemGroup>
