--- a/TrumpEngine.Core/TrumpEngine.Core.csproj
+++ b/TrumpEngine.Core/TrumpEngine.Core.csproj
@@ -7,6 +7,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\TrumpEngine.Data\TrumpEngine.Data.csproj" />
     <ProjectReference Include="..\TrumpEngine.Model\TrumpEngine.Model.csproj" />
   </ItemGroup>
