--- a/TrumpEngine.Data/TrumpEngine.Data.csproj
+++ b/TrumpEngine.Data/TrumpEngine.Data.csproj
@@ -11,5 +11,8 @@
   <ItemGroup>
     <Reference Include="Microsoft.Extensions.Configuration"/>
   </ItemGroup>
-
+<ItemGroup>
+    <PackageReference Include="Newtonsoft.Json" Version="10.0.3" />
+  </ItemGroup>
+  
 </Project>
