--- a/TrumpEngine.Api/TrumpEngine.Api.csproj
+++ b/TrumpEngine.Api/TrumpEngine.Api.csproj
@@ -1,12 +1,10 @@
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project Sdk="Microsoft.NET.Sdk.Web">
-
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
+    <UserSecretsId>38a71694-9475-4f26-98e2-2bf606640a80</UserSecretsId>
   </PropertyGroup>
-
   <ItemGroup>
     <ProjectReference Include="..\TrumpEngine.Core\TrumpEngine.Core.csproj" />
   </ItemGroup>
-
-
 </Project>
