Create shared project and add settings to it. Add bandCore and bandData to services collection and inject spotify secrets to the file (removed hardcoded configs)

--- a/TrumpEngine.Api/TrumpEngine.Api.csproj
+++ b/TrumpEngine.Api/TrumpEngine.Api.csproj
@@ -6,5 +6,6 @@
   </PropertyGroup>
   <ItemGroup>
     <ProjectReference Include="..\TrumpEngine.Core\TrumpEngine.Core.csproj" />
+    <ProjectReference Include="..\TrumpEngine.Shared\TrumpEngine.Shared.csproj" />
   </ItemGroup>
 </Project>
