Test to see if the value is returned

--- a/.github/workflows/dotnetcore.yml
+++ b/.github/workflows/dotnetcore.yml
@@ -23,6 +23,8 @@ jobs:
       run: dotnet build --configuration Release --no-restore
     - name: Test
       run: dotnet test --no-restore --verbosity normal
+    - name: Testing
+      run: echo ${{ secrets.BASEURL }}
       env: 
         BASEURL: ${{ secrets.BASEURL }}
         PATHARTISTINFORMATION: ${{ secrets.PATHARTISTINFORMATION }}
