--- a/.github/workflows/dotnetcore.yml
+++ b/.github/workflows/dotnetcore.yml
@@ -22,7 +22,7 @@ jobs:
     - name: Build
       run: dotnet build --configuration Release --no-restore
     - name: Testing
-      run: echo ${{ secrets.BASEURL }}
+      run: echo ${{ secrets.SPOTIFY__BASEURL }}
     - name: Test
       run: dotnet test --no-restore --verbosity normal
       env: 
