--- a/.github/workflows/dotnetcore.yml
+++ b/.github/workflows/dotnetcore.yml
@@ -26,8 +26,8 @@ jobs:
     - name: Test
       run: dotnet test --no-restore --verbosity normal
       env: 
-        BASEURL: ${{ secrets.BASEURL }}
-        PATHARTISTINFORMATION: ${{ secrets.PATHARTISTINFORMATION }}
+        BASEURL: ${{ secrets.SPOTIFY__BASEURL }}
+        PATHARTISTINFORMATION: ${{ secrets.SPOTIFY__PATHARTISTINFORMATION }}
         PATHRECOMMENDATIONSBYGENRE: ${{ secrets.PATHRECOMMENDATIONSBYGENRE }}
         TOKENURL: ${{ secrets.TOKENURL }}
 
