Test to see if the value is returned

--- a/.github/workflows/dotnetcore.yml
+++ b/.github/workflows/dotnetcore.yml
@@ -29,5 +29,5 @@ jobs:
         BASEURL: ${{ secrets.SPOTIFY__BASEURL }}
         PATHARTISTINFORMATION: ${{ secrets.SPOTIFY__PATHARTISTINFORMATION }}
         PATHRECOMMENDATIONSBYGENRE: ${{ secrets.SPOTIFY__PATHRECOMMENDATIONSBYGENRE }}
-        TOKENURL: ${{ secrets.TOKENURL }}
+        TOKENURL: ${{ secrets.SPOTIFY__TOKENURL }}
 
