--- a/.github/workflows/dotnetcore.yml
+++ b/.github/workflows/dotnetcore.yml
@@ -25,10 +25,8 @@ jobs:
       run: echo ${{ secrets.SPOTIFY__BASEURL }}
     - name: Test
       env: 
-        BASEURL: ${{ secrets.SPOTIFY__BASEURL }}
-        PATHARTISTINFORMATION: ${{ secrets.SPOTIFY__PATHARTISTINFORMATION }}
         PATHRECOMMENDATIONSBYGENRE: ${{ secrets.SPOTIFY__PATHRECOMMENDATIONSBYGENRE }}
         TOKENURL: ${{ secrets.SPOTIFY__TOKENURL }}
-      run: export SPOTIFY__BASEURL='https://api.spotify.com/v1/';export SPOTIFY__PATHARTISTINFORMATION='artists?ids={0}';export SPOTIFY__PATHRECOMMENDATIONSBYGENRE='recommendations?market=BR&seed_genres={0}&limit=10';export SPOTIFY__TOKENURL='https://accounts.spotify.com/api/token'; dotnet test --no-restore --verbosity normal
+      run: export SPOTIFY__BASEURL="${{ secrets.SPOTIFY__BASEURL }}";export SPOTIFY__PATHARTISTINFORMATION="${{ secrets.SPOTIFY__PATHARTISTINFORMATION }}";export SPOTIFY__PATHRECOMMENDATIONSBYGENRE='recommendations?market=BR&seed_genres={0}&limit=10';export SPOTIFY__TOKENURL='https://accounts.spotify.com/api/token'; dotnet test --no-restore --verbosity normal
 
 
