--- a/.github/workflows/dotnetcore.yml
+++ b/.github/workflows/dotnetcore.yml
@@ -19,4 +19,9 @@ jobs:
     - name: Build
       run: dotnet build --configuration Release --no-restore
     - name: Test
-      run: export SPOTIFY__BASEURL="${{ secrets.SPOTIFY__BASEURL }}";export SPOTIFY__PATHARTISTINFORMATION="${{ secrets.SPOTIFY__PATHARTISTINFORMATION }}";export SPOTIFY__PATHRECOMMENDATIONSBYGENRE='${{ secrets.SPOTIFY__PATHRECOMMENDATIONSBYGENRE }}';export SPOTIFY__TOKENURL='${{ secrets.SPOTIFY__TOKENURL }}'; dotnet test --no-restore --verbosity normal
+      run: |
+        export SPOTIFY__BASEURL="${{ secrets.SPOTIFY__BASEURL }}";
+        export SPOTIFY__PATHARTISTINFORMATION="${{ secrets.SPOTIFY__PATHARTISTINFORMATION }}";
+        export SPOTIFY__PATHRECOMMENDATIONSBYGENRE='${{ secrets.SPOTIFY__PATHRECOMMENDATIONSBYGENRE }}';
+        export SPOTIFY__TOKENURL='${{ secrets.SPOTIFY__TOKENURL }}'; 
+        dotnet test --no-restore --verbosity normal
