--- a/TrumpEngine.Api/TrumpEngine.Api.csproj
+++ b/TrumpEngine.Api/TrumpEngine.Api.csproj
@@ -5,6 +5,9 @@
     <UserSecretsId>38a71694-9475-4f26-98e2-2bf606640a80</UserSecretsId>
   </PropertyGroup>
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="3.1.5" />
+  </ItemGroup>
+  <ItemGroup>
     <ProjectReference Include="..\TrumpEngine.Core\TrumpEngine.Core.csproj" />
     <ProjectReference Include="..\TrumpEngine.Shared\TrumpEngine.Shared.csproj" />
   </ItemGroup>
