--- a/.github/workflows/dotnetcore.yml
+++ b/.github/workflows/dotnetcore.yml
@@ -23,4 +23,5 @@ jobs:
         export SPOTIFY__PATHARTISTINFORMATION='${{ secrets.SPOTIFY__PATHARTISTINFORMATION }}';
         export SPOTIFY__PATHRECOMMENDATIONSBYGENRE='${{ secrets.SPOTIFY__PATHRECOMMENDATIONSBYGENRE }}';
         export SPOTIFY__TOKENURL='${{ secrets.SPOTIFY__TOKENURL }}';
+        export SPOTIFY__CLIENTID='${{ secrets.SPOTIFY__CLIENTID }}'
         dotnet test --no-restore --verbosity normal
