--- a/.github/workflows/dotnetcore.yml
+++ b/.github/workflows/dotnetcore.yml
@@ -22,6 +22,7 @@ jobs:
         export SPOTIFY__BASEURL='${{ secrets.SPOTIFY__BASEURL }}';
         export SPOTIFY__PATHARTISTINFORMATION='${{ secrets.SPOTIFY__PATHARTISTINFORMATION }}';
         export SPOTIFY__PATHRECOMMENDATIONSBYGENRE='${{ secrets.SPOTIFY__PATHRECOMMENDATIONSBYGENRE }}';
+        export SPOTIFY__TOKENURL='${{ secrets.SPOTIFY__TOKENURL }}';
         export SPOTIFY__CLIENTID='${{ secrets.SPOTIFY__CLIENTID }}';
-        export SPOTIFY__CLIENTSECRET='${{ secrets.SPOTIFY__CLIENTSECRET }}';        
+        export SPOTIFY__CLIENTSECRET='${{ secrets.SPOTIFY__CLIENTSECRET }}';    
         dotnet test --no-restore --verbosity normal
