--- a/.github/workflows/dotnetcore.yml
+++ b/.github/workflows/dotnetcore.yml
@@ -26,4 +26,5 @@ jobs:
         export SPOTIFY__CLIENTID='${{ secrets.SPOTIFY__CLIENTID }}';
         export SPOTIFY__CLIENTSECRET='${{ secrets.SPOTIFY__CLIENTSECRET }}';
         export LASTFM__API_KEY='${{ secrets.LASTFM__API_KEY }}';
+        export LASTFM__REGISTERED_TO='${{ secrets.LASTFM_REGISTERED_TO }}';
         dotnet test --no-restore --verbosity normal
