--- a/.github/workflows/dotnetcore.yml
+++ b/.github/workflows/dotnetcore.yml
@@ -25,7 +25,7 @@ jobs:
         export SPOTIFY__TOKENURL='${{ secrets.SPOTIFY__TOKENURL }}';
         export SPOTIFY__CLIENTID='${{ secrets.SPOTIFY__CLIENTID }}';
         export SPOTIFY__CLIENTSECRET='${{ secrets.SPOTIFY__CLIENTSECRET }}';
-        export LASTFM__API_KEY='${{ secrets.LASTFM__API_KEY }}';
+        export LASTFM__API_KEY='${{ secrets.LASTFM_API_KEY }}';
         export LASTFM__REGISTERED_TO='${{ secrets.LASTFM_REGISTERED_TO }}';
-        export LASTFM__SHARED_SECRET='${{ secrets.LASTFM_SHARED_SECRET }}';
+        
         dotnet test --no-restore --verbosity normal
