add authentication using firebase jwt

--- a/TrumpEngine.Shared/TrumpEngine.Shared.csproj
+++ b/TrumpEngine.Shared/TrumpEngine.Shared.csproj
@@ -4,4 +4,8 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Firebase.Auth.Rest" Version="1.0.5" />
+  </ItemGroup>
+
 </Project>
