--- a/TrumpEngine.Api/TrumpEngine.Api.csproj
+++ b/TrumpEngine.Api/TrumpEngine.Api.csproj
@@ -9,9 +9,18 @@
     <PackageReference Include="Firebase.Auth.Rest" Version="1.1.8-beta" />
     <PackageReference Include="FirebaseAdmin" Version="1.14.0" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="3.1.18" />
+    <PackageReference Include="Microsoft.Data.Sqlite" Version="5.0.12" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\TrumpEngine.Core\TrumpEngine.Core.csproj" />
+    <ProjectReference Include="..\TrumpEngine.Business\TrumpEngine.Business.csproj" />
+    <ProjectReference Include="..\TrumpEngine.Model\TrumpEngine.Model.csproj" />
+    <ProjectReference Include="..\TrumpEngine.Scraper.Core\TrumpEngine.Scraper.Core.csproj" />
+    <ProjectReference Include="..\TrumpEngine.Scraper.Data\TrumpEngine.Scraper.Data.csproj" />
     <ProjectReference Include="..\TrumpEngine.Shared\TrumpEngine.Shared.csproj" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Update="trumpdata.db">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 </Project>
