--- a/TrumpEngine.Scraper.Core/TrumpEngine.Scraper.Core.csproj
+++ b/TrumpEngine.Scraper.Core/TrumpEngine.Scraper.Core.csproj
@@ -2,13 +2,16 @@
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
+    <RootNamespace>TrumpEngine.Core</RootNamespace>
+    <AssemblyName>TrumpEngine.Core</AssemblyName>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.Data.Sqlite.Core" Version="5.0.13" />
+    <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\TrumpEngine.Scraper.Data\TrumpEngine.Scraper.Data.csproj" />
     <ProjectReference Include="..\TrumpEngine.Model\TrumpEngine.Model.csproj" />
   </ItemGroup>
 
